--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -52,7 +52,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           ,
           distance="23"
           ,
-          uphill="+/-2050"
+          uphill="2050"
           ,
           link="arbas-infinito"
         />
@@ -64,16 +64,16 @@ import SectionTitle from '../components/SectionTitle.astro';
         ,
         distance="12,5"
         ,
-        uphill="+/-850"
+        uphill="850"
         ,
         link="arbas-luna"
       />
       <DistanceField
         name="Trail “Camino de la Cuencha”"
         ,
-        description="Recorrido rápido y divertido para los participantes de la categoría infantil"
+        description="Recorrido rápido y divertido para los participantes de la categoría infantil y cadete"
         ,
-        distance="+/-4,5"
+        distance="4,5"
         ,
         uphill="190"
         ,
@@ -131,7 +131,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       <p class="info-text pt-4">
         El trazado presenta dos partes bien diferenciadas: la primera, hasta el paso intermedio,
         discurre por senderos y caminos entre praderas; la segunda es más técnica, con senderos que
-        atraviesan laderas herbosas y zonas calizas.
+        atraviesan laderas herbosas y zonas calizas subiendo tres emblemáticas cimas: La Brazosa (1937m), Peña Esquina (1952m), María del Medio (1907m)
       </p>
       <h3 class="text-xl font-semibold mt-4 mb-2 lg:mt-8 lg:text-2xl">Descripción de la carrera</h3>
       <div class="flex flex-col gap-2">
@@ -145,18 +145,18 @@ import SectionTitle from '../components/SectionTitle.astro';
           <li>
             <strong>Cubillas de Arbas (km 0) – Collado Ferreras (km 2,5):</strong>
             Subida de 370 m de desnivel. Hasta la cabaña del pastor (km 1,3) el recorrido sigue un camino
-            ganadero, para después continuar por una senda herbosa paralela a un arroyo hasta el collado.
+            ganadero, para después continuar por una senda herbosa paralela a un arroyo hasta el collado Ferreras (punto Control y avituallamiento líquido de emergencia)
           </li>
 
           <li>
             <strong>Collado Ferreras (km 2,5) – Sena de Luna (km 5):</strong>
             Bajada rápida de 450 m de desnivel por un sendero herboso hasta el refugio ganadero (km 4),
-            y después por pista hasta las proximidades de la autopista.
+            y después por pista hasta las proximidades de la autopista (avituallmiento sólido y líquido)
           </li>
 
           <li>
             <strong>Sena de Luna (km 5) – Collado Aronga (km 8):</strong>
-            Subida de 400 m de desnivel por sendas ganaderas a través de praderas de montaña.
+            Subida de 400 m de desnivel por sendas ganaderas a través de praderas de montaña hasta el collado (avituallamiento líquido)
           </li>
 
           <li>
@@ -165,7 +165,7 @@ import SectionTitle from '../components/SectionTitle.astro';
             a las Peñas de Prado conduce hasta la carretera. Desde allí se enlaza con una senda que llega
             al túnel de Alceo. Tras superar un ascenso de 80 m por la Sierra de Alceo, el antiguo <strong
               >Camino de los Carros</strong
-            > conduce de vuelta a Cubillas.
+            > conduce de vuelta a Cubillas (Punto de control y avituallamiento sólido)
           </li>
         </ul>
 
@@ -175,28 +175,28 @@ import SectionTitle from '../components/SectionTitle.astro';
           <li>
             <strong>Cubillas de Arbas (km 12,5) – Pico la Brazosa (km 15):</strong>
             Subida de 620 m. El trazado comienza por el camino de la Ferreta, rodea la Peña El Castillo
-            y asciende con fuerte pendiente hasta la cima.
+            y asciende con fuerte pendiente hasta la cima(punto de control y avituallamiento líquido de emergecia)
           </li>
 
           <li>
             <strong>Pico la Brazosa (km 15) – Peña Ortigal / Peña Esquina (km 16):</strong>
             Tramo de 1 km por sendas ganaderas: 120 m de bajada y 130 m de subida. Los últimos 100 m
-            son más técnicos, sobre roca caliza.
+            son más técnicos, sobre roca caliza hasta llegar a la cima (punto de control y avituallamiento líquido de emergecia)
           </li>
 
           <li>
             <strong>Peña Ortigal (km 16) – Refugio de las Tres Marías (km 17,5):</strong>
             Descenso de 400 m. El inicio es técnico sobre roca caliza (100 m), pero pronto se convierte
-            en senda herbosa que permite correr con fluidez.
+            en senda herbosa que permite correr con fluidez hasta el refugio ((punto de control y avituallamiento sòlido)
           </li>
 
           <li>
             <strong>Refugio Tres Marías (km 17,5) – Collada del Palero:</strong>
-            Ascenso exigente de 330 m de desnivel por una senda técnica que atraviesa terreno calizo.
+            Ascenso exigente de 330 m de desnivel por una senda técnica que atraviesa terreno calizo hasta el espectacular collado del Palero (punto de control)
           </li>
 
           <li>
-            <strong>Refugio Tres Marías (km 17,5) – Cubillas de Arbas (km 23,5):</strong>
+            <strong>Collado del Palero (km 17,5) – Cubillas de Arbas (km 23,5):</strong>
             Descenso por un espectacular sendero en la cara oeste, entre el Palero y la María del Medio.
             Una bajada directa de 400 m de desnivel hasta el fondo del valle, para enlazar con un camino
             que lleva a meta en menos de 600 m (con un ligero ascenso final de 30 m).
