cambio enlace wikiloc

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -206,17 +206,20 @@ import SectionTitle from '../components/SectionTitle.astro';
 
       <h3 class="text-xl font-semibold mt-4 lg:text-2xl">Puntos de paso</h3>
       <ul class="list-disc">
-        <li><strong>Collado Ferreras:</strong> control y avituallamiento líquido.</li>
-        <li><strong>Caldas de Luna:</strong> control y avituallamiento líquido.</li>
-        <li><strong>Collada de Aronga:</strong> sin control.</li>
+        <li><strong>Collado Ferreras:</strong> control y avituallamiento líquido de emergencia.</li>
+        <li><strong>Caldas de Luna:</strong> control y avituallamiento sólido y líquido.</li>
+        <li><strong>Collada de Aronga:</strong> avituallamiento líquido.</li>
         <li><strong>Cruce de carretera:</strong> punto de control.</li>
         <li>
           <strong>Cubillas de Arbas (paso intermedio):</strong> control y avituallamiento líquido y sólido.
         </li>
-        <li><strong>Cima de la Peña la Brazosa:</strong> punto de control.</li>
-        <li><strong>Cima de Peña Ortigal:</strong> punto de control.</li>
+        <li><strong>Cima de la Peña la Brazosa:</strong> punto de control y avituallamiento de emergencia.</li>
+        <li><strong>Cima de Peña Ortigal:</strong> punto de control y avituallamiento de emergecia.</li>
         <li>
           <strong>Refugio de las Tres Marías:</strong> control y avituallamiento líquido y sólido.
+        </li>
+        <li>
+                  <strong>Collado del Palero:</strong> control.
         </li>
         <li><strong>Meta en Cubillas de Arbas:</strong> avituallamiento líquido y sólido.</li>
       </ul>
@@ -224,11 +227,11 @@ import SectionTitle from '../components/SectionTitle.astro';
       <p class="info-text">
         El primer bucle se estima en torno a <strong>1 hora y 30 minutos</strong> para los corredores
         más rápidos. El segundo bucle será más exigente, con un tiempo aproximado de <strong
-          >2 horas</strong
+          >2 horas y 15m </strong
         >. El tiempo máximo de carrera se establece en <strong>5 horas y 30 minutos</strong>.
       </p>
       <div class="text-center mt-6">
-        <a href="https://wikiloc.com" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
+        <a href="https://es.wikiloc.com/rutas-carrera-por-montana/trail-arbas-infinito-2025-212899881?h=a2zl8q2rm6&wa=sd&utm_campaign=badge&utm_source=unknown&utm_medium=unknown" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
           Link al track
         </a>
       </div>
