carrusel fotos arbas-luna

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -245,13 +245,13 @@ import SectionTitle from '../components/SectionTitle.astro';
         con menor exigencia técnica. El recorrido, de 12,5 kilómetros, atraviesa los <strong
           >valles de Arbas</strong
         > y <strong>Caldas de Luna</strong>, ofreciendo magníficas vistas de cumbres emblemáticas
-        como la <strong>Bargaña</strong>, las <strong>Peñas de Prado</strong> o el <strong
+        como la <strong>Barragana</strong>, las <strong>Peñas de Prado</strong> o el <strong
           >Cirbanal</strong
         >, entre otras.
       </p>
       <Carousel
         images={[
-          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
+          { src: luna1, alt: 'Vista desde Barragana', caption: 'Collado de la Barragana' },
           { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
           { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
           { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
