carusel de luna

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -252,9 +252,8 @@ import SectionTitle from '../components/SectionTitle.astro';
       <Carousel
         images={[
           { src: luna1, alt: 'Vista desde Barragana', caption: 'Collado de la Barragana' },
-          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
-          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
-          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
+          { src: luna2, alt: 'Subida al collado de Aronga', caption: 'Subida al collado de Aronga' },
+          { src: luna3, alt: 'Collado Ferreras', caption: 'Collado Ferreras' },
         ]}
       />
       <p class="info-text pt-4">
