--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -22,6 +22,9 @@ import luna2 from '../assets/imgCategorias/luna2.png';
 import luna3 from '../assets/imgCategorias/luna3.png';
 import luna4 from '../assets/imgCategorias/luna4.png';
 import SectionTitle from '../components/SectionTitle.astro';
+//Carousel cuencha
+import cuencha1 from '../assets/imgCategorias/cuencha1.jpg';
+import cuencha2 from '../assets/imgCategorias/cuencha2.jpg';
 
 
 ---
@@ -251,7 +254,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       </p>
       <Carousel
         images={[
-          { src: luna2, alt: 'Vista desde Barragana', caption: 'Collado de la Barragana' },
+          { src: luna1, alt: 'Vista desde Barragana', caption: 'Collado de la Barragana' },
           { src: luna2, alt: 'Subida al collado de Aronga', caption: 'Subida al collado de Aronga' },
           { src: luna3, alt: 'Collado Ferreras', caption: 'Collado Ferreras' },
         ]}
@@ -300,16 +303,16 @@ import SectionTitle from '../components/SectionTitle.astro';
 
       <h3 class="text-xl font-semibold mt-4 lg:text-2xl">Puntos de paso</h3>
       <ul class="list-disc">
-        <li><strong>Collado Ferreras:</strong> control y avituallamiento líquido.</li>
+        <li><strong>Collado Ferreras:</strong> control y avituallamiento líquido emergencia.</li>
         <li><strong>Caldas de Luna:</strong> control y avituallamiento líquido y sólido.</li>
-        <li><strong>Collada de Aronga:</strong> sin control.</li>
+        <li><strong>Collada de Aronga:</strong> punto de control y avituallamiento liquido.</li>
         <li><strong>Cruce de carretera:</strong> punto de control.</li>
-        <li><strong>Meta en Cubillas de Arbas:</strong> avituallamiento líquido y sólido.</li>
+        <li><strong>Meta en Cubillas de Arbas:</strong> Meta y avituallamiento líquido y sólido.</li>
       </ul>
       <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempos estimados</h3>
-      <p class="info-text mb-20">Tiempos?</p>
+      <p class="info-text mb-20">Tiempo record Hugo Cerezo 1:19:40. Tiempo de cierre 3 horas y 15m</p>
       <div class="text-center mt-6">
-        <a href="#" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
+        <a href="#https://es.wikiloc.com/rutas-carrera-por-montana/arbas-luna-by-trail-valle-de-arbas-2025-209373354" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
           Link al track
         </a>
       </div>
@@ -319,7 +322,7 @@ import SectionTitle from '../components/SectionTitle.astro';
         <h2 class="text-2xl font-bold title-underline animate-underline mt-8 mb-4 text-center lg:text-3xl">
           Trail "Camino de la Cuencha"
         </h2>
-        <h3 class="text-xl font-semibold text-[#e49a69] mb-4">Categoría infantil</h3>
+        <h3 class="text-xl font-semibold text-[#e49a69] mb-4">Categoría infantil y cadete</h3>
       </div>
       <p class="info-text mb-2">
         Se trata de un recorrido rápido y accesible, que transcurre por sendas y caminos fáciles de
@@ -328,10 +331,8 @@ import SectionTitle from '../components/SectionTitle.astro';
       </p>
       <Carousel
         images={[
-          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
-          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
-          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
-          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
+          { src: cuencha1, alt: 'Vista desde collado de la Cuencha', caption: 'Vista desde collado de la Cuencha' },
+          { src: cuencha2, alt: 'Cartel', caption: 'Cartel' },
         ]}
       />
       <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
