perfil cuencha foto

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -8,6 +8,8 @@ import Carousel from '../components/Carousel.astro';
 //Images
 import PerfilInfinito from '../assets/imgCategorias/perfilInfinito.png';
 import PerfilLuna from '../assets/imgCategorias/perfilLuna.png';
+import PerfilCuencha from '../assets/imgCategorias/perfilCuencha.png';
+
 
 //Carousel infinito
 import infinito1 from '../assets/imgCategorias/infinito1.jpg';
@@ -23,8 +25,8 @@ import luna3 from '../assets/imgCategorias/luna3.png';
 import luna4 from '../assets/imgCategorias/luna4.png';
 import SectionTitle from '../components/SectionTitle.astro';
 //Carousel cuencha
-import cuencha1 from '../assets/imgCategorias/cuencha1.jpg';
-import cuencha2 from '../assets/imgCategorias/cuencha2.jpg';
+import cuencha1 from '../assets/imgCategorias/cuencha1.png';
+import cuencha2 from '../assets/imgCategorias/cuencha2.png';
 
 
 ---
