--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -27,6 +27,11 @@ import SectionTitle from '../components/SectionTitle.astro';
 //Carousel cuencha
 import cuencha1 from '../assets/imgCategorias/cuencha1.png';
 import cuencha2 from '../assets/imgCategorias/cuencha2.png';
+//Carousel castro
+import castro1 from '../assets/imgCategorias/castro1.png';
+import castro2 from '../assets/imgCategorias/castro2.png';
+import castro3 from '../assets/imgCategorias/castro3.png';
+import castro4 from '../assets/imgCategorias/castro4.png';
 
 
 ---
@@ -333,15 +338,15 @@ import cuencha2 from '../assets/imgCategorias/cuencha2.png';
       </p>
       <Carousel
         images={[
-          { src: cuencha1, alt: 'Vista desde collado de la Cuencha', caption: 'Vista desde collado de la Cuencha' },
-          { src: cuencha2, alt: 'Cartel', caption: 'Cartel' },
+          { src: cuencha1, alt: 'Collado de la Cuencha', caption: 'Collado de la Cuencha' },
+          { src: cuencha2, alt: 'Cartel de la Cuencha', caption: 'Cartel de la Cuencha' },
+          
         ]}
       />
-      <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
       <h3 class="text-xl font-semibold mt-4 mb-2 lg:mt-8 lg:text-2xl">Descripción de la carrera</h3>
       <div class="flex flex-col gap-2">
         <Image
-          src={PerfilLuna}
+          src={PerfilCuencha}
           alt="Perfil de la carrera Trail Arbas-Luna"
           class="w-full h-auto mb-4"
           loading="lazy"
@@ -376,9 +381,9 @@ import cuencha2 from '../assets/imgCategorias/cuencha2.png';
         <li><strong>Arroyo Balagares:</strong> punto de control y avituallamiento líquido.</li>
       </ul>
       <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempos estimados</h3>
-      <p class="info-text mb-20">Tiempos?</p>
+      <p class="info-text mb-20">45 minutos</p>
       <div class="text-center mt-6">
-        <a href="#" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
+        <a href="https://es.wikiloc.com/rutas-carrera-por-montana/cadetes-2025-by-valle-de-arbas-209374542" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
           Link al track
         </a>
       </div>
@@ -386,19 +391,19 @@ import cuencha2 from '../assets/imgCategorias/cuencha2.png';
     <article id="km-desvertical" class="pt-20 w-[90%] mx-auto max-w-300 mb-20">
       <div class="title-center pt-4 flex flex-col items-center reveal-element">
         <h2 class="text-2xl font-bold title-underline animate-underline mt-8 mb-4 text-center lg:text-3xl">
-          Kilómetro Desvertical
+          Kilómetro Desvertical (Viernes al anochecer)
         </h2>
-        <h3 class="text-xl font-semibold text-[#e49a69] mb-4">Carrera antioficial</h3>
+        <h3 class="text-xl font-semibold text-[#e49a69] mb-4">...Te aterves a bajar al anochecer desde el Pico el castro a Cubillas?</h3>
       </div>
       <p class="info-text mb-2">
-        Se trata de un recorrido antioficial de puro descenso que parte desde la cima del Pico ... y llega hasta Cubillas de Arbas. Con una distancia aproximada de 4,5 km y un desnivel negativo de 700 metros, esta carrera está diseñada para los amantes de la velocidad y la adrenalina en montaña.
+        Se trata de un recorrido de puro descenso que parte desde la cima del Pico el Castro y llega hasta Cubillas de Arbas. Con una distancia aproximada de 5 km y un desnivel negativo de 430 metros, esta carrera está diseñada para los amantes de la velocidad y la adrenalina en montaña.
       </p>
       <Carousel
         images={[
-          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
-          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
-          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
-          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
+          { src: castro1, alt: 'Vista de bajada 1', caption: 'vista bajada 1' },
+          { src: castro2, alt: 'vista bajada 2', caption: 'vista bajada 2' },
+          { src: castro3, alt: 'vista bajada 3', caption: 'vista bajada 3' },
+          { src: castro4, alt: 'vista bajada 4' caption: 'vista bajada 4' },
         ]}
       />
       <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
@@ -442,7 +447,7 @@ import cuencha2 from '../assets/imgCategorias/cuencha2.png';
       <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempos estimados</h3>
       <p class="info-text mb-20">Tiempos?</p>
       <div class="text-center mt-6">
-        <a href="#" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
+        <a href="https://es.wikiloc.com/rutas-senderismo/pico-del-castro-collado-las-lomas-cubillas-de-arbas-244519225?h=a2zl8q2rm6&wa=sd&utm_campaign=badge&utm_source=unknown&utm_medium=unknown" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
           Link al track
         </a>
       </div>
