--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -403,7 +403,7 @@ import castro4 from '../assets/imgCategorias/castro4.png';
           { src: castro1, alt: 'Vista de bajada 1', caption: 'vista bajada 1' },
           { src: castro2, alt: 'vista bajada 2', caption: 'vista bajada 2' },
           { src: castro3, alt: 'vista bajada 3', caption: 'vista bajada 3' },
-          { src: castro4, alt: 'vista bajada 4' caption: 'vista bajada 4' },
+          { src: castro4, alt: 'vista bajada 4', caption: 'vista bajada 4' },
         ]}
       />
       <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
