descripcion carrera castro

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -9,6 +9,8 @@ import Carousel from '../components/Carousel.astro';
 import PerfilInfinito from '../assets/imgCategorias/perfilInfinito.png';
 import PerfilLuna from '../assets/imgCategorias/perfilLuna.png';
 import PerfilCuencha from '../assets/imgCategorias/perfilCuencha.png';
+import PerfilCastro from '../assets/imgCategorias/perfilcastro.png';
+
 
 
 //Carousel infinito
@@ -380,7 +382,7 @@ import castro4 from '../assets/imgCategorias/castro4.png';
         <li><strong>Cruce:</strong> punto de control.</li>
         <li><strong>Arroyo Balagares:</strong> punto de control y avituallamiento líquido.</li>
       </ul>
-      <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempos estimados</h3>
+      <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempo estimado</h3>
       <p class="info-text mb-20">45 minutos</p>
       <div class="text-center mt-6">
         <a href="https://es.wikiloc.com/rutas-carrera-por-montana/cadetes-2025-by-valle-de-arbas-209374542" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
@@ -410,8 +412,8 @@ import castro4 from '../assets/imgCategorias/castro4.png';
       <h3 class="text-xl font-semibold mt-4 mb-2 lg:mt-8 lg:text-2xl">Descripción de la carrera</h3>
       <div class="flex flex-col gap-2">
         <Image
-          src={PerfilLuna}
-          alt="Perfil de la carrera Trail Arbas-Luna"
+          src={PerfilCastro}
+          alt="Perfil de la carrera del descenso Vertical"
           class="w-full h-auto mb-4"
           loading="lazy"
         />
