texto de castro

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -419,25 +419,19 @@ import castro4 from '../assets/imgCategorias/castro4.png';
         />
         <ul>
           <li>
-            <strong>Cubillas de Arbas (km 0) – Cruce (km 1,5):</strong>
-            Salida desde el pueblo por un camino que enlaza con un sendero herboso, con 120 m de desnivel
-            positivo hasta alcanzar el cruce.
+            <strong>Pico el Castro (1720m) (km 0) – Cruce camino Cuencha(km 1,1):</strong>
+            Salida del pico y bajada por sendero hasta el camino de la Cuencha
           </li>
 
           <li>
-            <strong>Cruce (km 1,5) – Arroyo Balagares (km 2,2):</strong>
-            Tramo por pista con 70 m de desnivel.
+            <strong>Cruce (km 1,1) – Collado de la Cuencha (km 3,1):</strong>
+            Tramo por pista.
           </li>
 
           <li>
-            <strong>Arroyo Balagares (km 2,2) – Cruce (km 2,9):</strong>
-            Regreso por el mismo camino utilizado en la subida.
-          </li>
-
-          <li>
-            <strong>Cruce (km 2,9) – Cubillas de Arbas (km 4,5):</strong>
-            Descenso de 120 m de desnivel por pista hasta el pueblo.
-          </li>
+            <strong>Collado de la Cuencha (km 3,1) – Cubillas de Arbas (km 5):</strong>
+            Por sendero viendo todo el rato el pueblo.
+          </li>        
         </ul>
       </div>
 
