pagina de inscripciones cambiar texto y comentar precios

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -435,13 +435,9 @@ import castro4 from '../assets/imgCategorias/castro4.png';
         </ul>
       </div>
 
-      <h3 class="text-xl font-semibold mt-4 lg:text-2xl">Puntos de paso</h3>
-      <ul class="list-disc">
-        <li><strong>Cruce:</strong> punto de control.</li>
-        <li><strong>Arroyo Balagares:</strong> punto de control y avituallamiento líquido.</li>
-      </ul>
-      <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempos estimados</h3>
-      <p class="info-text mb-20">Tiempos?</p>
+      
+      <h3 class="text-xl font-semibold mt-8 lg:text-2xl mb-2">Tiempo estimado</h3>
+      <p class="info-text mb-20">35-40 minutos</p>
       <div class="text-center mt-6">
         <a href="https://es.wikiloc.com/rutas-senderismo/pico-del-castro-collado-las-lomas-cubillas-de-arbas-244519225?h=a2zl8q2rm6&wa=sd&utm_campaign=badge&utm_source=unknown&utm_medium=unknown" class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200">
           Link al track
