--- a/src/pages/inscripcion.astro
+++ b/src/pages/inscripcion.astro
@@ -13,11 +13,11 @@ import SectionTitle from '../components/SectionTitle.astro';
   <section class="section-card">
     <SectionTitle
       title="Cómo inscribirse"
-      subtitle=""
+      subtitle="todavía no están activas las inscriciones"
     />
     <p class="info-text mb-4 text-center">
       Las inscripciones se realizan a través de la <a
-        href="https://www.trailvalledearbas.com"
+        href="https://www.fclm.com/carreras-por-montana-trail/"
         target="_blank"
         rel="noopener noreferrer"
         class="link-highlight"
@@ -32,7 +32,7 @@ import SectionTitle from '../components/SectionTitle.astro';
     </div>
   </section>
   <section class="section-card">
-    <SectionTitle
+    <!-- <SectionTitle
       title="Precios de inscripción"
       subtitle=""
     />
@@ -59,7 +59,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       carrera y una selección de productos locales. Además, todos los participantes que finalicen el
       recorrido recibirán una medalla finisher en reconocimiento a su esfuerzo.
     </p>
-  </section>
+  </section> -->
   
 </BasePageLayout>
 
