--- a/src/pages/inscripcion.astro
+++ b/src/pages/inscripcion.astro
@@ -13,7 +13,7 @@ import SectionTitle from '../components/SectionTitle.astro';
   <section class="section-card">
     <SectionTitle
       title="Cómo inscribirse"
-      subtitle="todavía no están activas las inscriciones"
+      subtitle="Todavía no están activas las inscriciones"
     />
     <p class="info-text mb-4 text-center">
       Las inscripciones se realizan a través de la <a
@@ -24,7 +24,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       >web de la federación de montaña y escalada de CyL</a>.
     </p>
     <div class="flex justify-center">
-      <a href="https://www.trailvalledearbas.com" class="button-link">
+      <a href="https://www.fclm.com/carreras-por-montana-trail/" class="button-link">
         <button class="px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer font-semibold">
           Inscribirse
         </button>
