--- a/src/pages/normativa.astro
+++ b/src/pages/normativa.astro
@@ -21,10 +21,10 @@ import SectionTitle from '../components/SectionTitle.astro';
       
       <ul>
         <li>
-          <strong>Edad mínima:</strong> Para las modalidades Trail Arbas Infinito y Trail Arbas-Luna, los participantes deben ser mayores de 18 años cumplidos el día de la prueba.
+          <strong>Edad mínima:</strong> Para las modalidades Trail Arbas Infinito y Trail Arbas-Luna, los participantes deben ser mayores de 18 años cumplidos el día de la prueba o mayores de 16 CON AUTORIZACIÓN.
         </li>
         <li>
-          <strong>Categorías inferiores:</strong> Las pruebas Sierra del Alceo está destinada a la categoría cadete (15 a 17 años), mientras que el Camino de la Cuencha es para la categoría infantil (12 a 14 años).
+          <strong>Categorías inferiores:</strong> La prueba Camino de la Cuencha está destinada a la categoría infantil y cadete (12 a 16 años).
         </li>
         <li>
           <strong>Condición física:</strong> Es imprescindible tener la preparación física adecuada a la dificultad de la prueba en la que se participa.
@@ -40,16 +40,16 @@ import SectionTitle from '../components/SectionTitle.astro';
       <h3 class="text-xl font-semibold mt-8 mb-4 lg:text-2xl">Inscripciones</h3>
       
       <ul>
-        <li>
+        <!-- <li>
           <strong>Plazo:</strong> Las inscripciones estarán abiertas hasta el 1 de mayo de 2025 o hasta completar el cupo de participantes.
-        </li>
+        </li> -->
         <li>
           <strong>Límite de participantes:</strong>
           <ul class="nested-list">
             <li>Trail Arbas Infinito: 150 corredores</li>
             <li>Trail Arbas-Luna: 150 corredores</li>
-            <li>Trail Sierra del Alceo: 50 corredores</li>
             <li>Trail Camino de la Cuencha: 50 corredores</li>
+            <li>Trail Descenso Vertical Pico el Castro: 54 corredores</li>
           </ul>
         </li>
         <li>
@@ -113,11 +113,8 @@ import SectionTitle from '../components/SectionTitle.astro';
       <h3 class="text-xl font-semibold mt-8 mb-4 lg:text-2xl">Material recomendado</h3>
       
       <ul class="list-disc">
-        <li><strong>Bastones:</strong> Recomendados especialmente para las modalidades de mayor distancia.</li>
-        <li><strong>Gafas de sol:</strong> Para protección ocular.</li>
-        <li><strong>Crema solar:</strong> Protección adecuada a las condiciones meteorológicas.</li>
-        <li><strong>Reloj GPS:</strong> Para seguimiento del recorrido.</li>
-        <li><strong>Calcetines de repuesto:</strong> Para mayor comodidad en caso de humedad.</li>
+        <li><strong>Bastones:</strong> Recomendados especialmente para Arbas Infinito (el que salga con bastones debe llevarlos todo el recorrido).</li>
+        <li><strong>Reloj GPS o similar</strong> Para seguimiento del recorrido.</li>
       </ul>
       
       <div class="p-4 mt-8 border-l-4 border-[#e49a69] bg-orange-50">
